--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ HEADER
     </div>
 
     <div class="fotka-item_title">
-      <a href="work.html" class="button1" target="_blank">Ну тыкни меня пидор<br>я на тебя сам тыкну гандон ебучий</a></div>
+      <a href="work.html" class="button1">Ну тыкни меня пидор<br>я на тебя сам тыкну гандон ебучий</a></div>
   </div>
   </div>
 
