--- a/work_fil.html
+++ b/work_fil.html
@@ -1,49 +1,54 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Филонов</title>
-  <style>
-   .leftimg {
-    float:left; /* Выравнивание по левому краю */
-    margin: 7px 7px 7px 0; /* Отступы вокруг картинки */
-   }
-   .rightimg  {
-    float: right; /* Выравнивание по правому краю  */
-    margin: 7px 0 7px 7px; /* Отступы вокруг картинки */
-   }
-  </style>
-  <!-- Нормализация стилей -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-  <!--Свои стили -->
-<link rel="stylesheet" href="main.css">
-  <!--Подключение веб-шрифтов -->
-<link href="https://fonts.googleapis.com/css?family=Merriweather|PT+Sans+Caption:400,700&display=swap" rel="stylesheet">
-<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel"stylesheet">
-<link rel="shortcut icon" type="image/x-icon" href="photo/1.png">
-<script src="https://kit.fontawesome.com/5f8c5e0978.js" crossorigin="anonymous"></script>
-<!--//Подключение веб-шрифтов -->
-</head>
-<!--Описание Фили -->
-<body>
-<div class="bg_rudik">
-  <div class="header1">
-    <p align="center"><h1 class="h1">Александр Филонов<h1></p>
-      <div class="header_slogan1">
-        <div class="photo_rudik"><img src="photo/fil_bot.jpg" width="600px" class="rightimg" alt="Clown">
-        </div>
-<div class="text_moy_1"<p>Жалкое подобие на человека, в интернете ведёт себя как ебучий интеллектуал а в жизни таковым не является.</p><div>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1" />
+  <meta name="description" content="Liquid Slider : The Last Responsive Content Slider You'll Ever Need" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-<div class="opisanie">
-<p>"Умный" суслик.
-  <p align="right">(&copy;Костя Кузнецов) </p>
-<p>Он как луна красив, он пиздабол бывший, юморной паренёк, хоккеист, лучший друг у него monkey.<p align="right">(&copy;Даниил Рудковский)</p>
-<p>Филонов - обожает хоккей и девочек постарше , не много уебан, совсем не много. <p align="right">(&copy;Александр Мутовкин)</p>
-<p>Человек с многозначительной фамилией<p align="right">(&copy;Александр Княженко</p>
-</div>
-      </div>
+  <!-- Optionally use Animate.css -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.0.0/animate.min.css">
+  <link rel="stylesheet" href="./css/liquid-slider.css">
+
+  <title>Филя</title>
+</head>
+<body class="no-js">
+<div class="background">
+  <div id="main-slider" class="liquid-slider">
+    <div>
+      <h2 class="title">Филонов</h2>
+      <img src="photos/filya.jpg" alt="ebla" width="300px" height="400px" class="eblan"><p align="left" class="first_slide">Жалкое подобие на человека, в интернете ведёт себя как ебучий интеллектуал а в жизни таковым не является.</p> <p align="right" class="first_slide_name">&copy; Кирилл Доманский</p>
+  </div>
+    <div>
+      <h2 class="title">Саня</h2>
+      <img src="photos/fil_bot.jpg" alt="ebla" width="300px" height="400px" class="eblan">
+      <p align="left" class="first_slide">"Умный" суслик.</p> <p align="right" class="first_slide_name">&copy; Костя Кузнецов</p>
     </div>
+    <div>
+      <h2 class="title">Тупой</h2>
+      <img src="photos/fil_3.jpg" alt="ebla" width="300px" height="400px" class="eblan">
+      <p align="left" class="first_slide">Он как луна красив, он пиздабол бывший, юморной паренёк, хоккеист, лучший друг у него monkey.</p> <p align="right" class="first_slide_name">&copy; Даниил Рудковский</p>
+    </div>
+    <div>
+      <h2 class="title">Хуеглот</h2>
+      <img src="photos/fil_4.jpg" alt="ebla" width="300px" height="400px" class="eblan">
+      <p align="left" class="first_slide">Филонов - обожает хоккей и девочек постарше , не много уебан, совсем не много.</p> <p align="right" class="first_slide_name">&copy; Александр Мутовкин</p>
+    </div>
+  </div>
+<footer>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.4/jquery.touchSwipe.min.js"></script>
+  <script src="./js/jquery.liquid-slider.min.js"></script>
+  <script>
+    /**
+     * If you need to access the internal property or methods, use this:
+     * var api = $.data( $('#main-slider')[0], 'liquidSlider');
+     * console.log(api);
+     */
+    $('#main-slider').liquidSlider();
+  </script>
+</footer>
+</div>
 </body>
 </html>
