--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel"stylesheet">
 <link rel="shortcut icon" type="image/x-icon" href="photo/1.png">
 <script src="https://kit.fontawesome.com/5f8c5e0978.js" crossorigin="anonymous"></script>
-<script src="http://www.fortress-design.com/js/snow-fall.js" type="text/javascript"></script>
+<script src="http://www.fortress-design.com/js/snow-fall.js"></script>
   </head>
   <body>
   <font color="#fff">
@@ -21,9 +21,11 @@ HEADER
   ................................ -->
 <div class="header">
     <div class="header__title"><h1 align="center">С Новым 2020<p>годом!</p></h1></div>
-    <div class="header_slogan"><h2 class="h2">Хотелось бы сказать, спасибо вам за всё что вы сделали для меня и для друг друга.<br> Спасибо за то что можете поддержать в нужный момент.<br> Спасибо за то что вы сейчас рядом и мы в этот прекрасный день собрались вместе.</h2><p><h3><span style="color:white">Люблю.</span> <span style="color:blue">Ценю.</span> <span style="color:red">Благодарю</span>.</div></h3>
-        <iframe style="display:none;" width="560" height="315" src="https://www.youtube.com/embed/v7s2VjwQSMw?rel=0&autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+    <div class="header_slogan"><h2 class="h2">Хотелось бы сказать, спасибо вам за всё что вы сделали для меня и для друг друга.<br> Спасибо за то что можете поддержать в нужный момент.<br> Спасибо за то что вы сейчас рядом и мы всегда можем собраться вместе.<br> Если честно, то меня очень радует присутсвие ваших ебал рядом.<br> С каждым уродцем у меня отдельная история, поэтому я сделал эту новогоднюю страницу для каждого! </h2><p><h3><span style="color:white">Люблю.</span> <span style="color:blue">Ценю.</span> <span style="color:red">Обнимаю</span>.</div></h3>
+        <br>
+        <br>
+        <br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/v7s2VjwQSMw?rel=0&autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <div class="header__arrow">
       <i class="fas fa-chevron-down"></i>
     </div>
@@ -34,25 +36,22 @@ HEADER
   <div class="container">
 
   <div class="title">
-Ебучий случай, это же создатель:
+Выбирайте, пацаны:
   </div>
 
-    <div class="row">
+<div class="row">
       <!-- Работа в фотках -->
 
-<div class="col-4">
-  <div class="portfolio-item">
-    <div class="fotka-item_img">
-      <img src="photo/7.jpg" width="80%" height="400px" alt="Твоя фотка">
-    </div>
-    <div class="fotka-item_title">
-      <a href="button_sozdateli">Кирюха</a>
-    </div>
-    <div class="fotka-item_text">
-    <p class="sozdateli">Сверху гений №1</p>
-    </div>
-  </div>
-  </div>
+      <div class="col-4">
+        <div class="portfolio-item">
+          <div class="fotka-item_img">
+            <img src="photo/lgbt.png" width="80%" height="400px" alt="Твоя фотка">
+          </div>
+
+          <div class="fotka-item_title">
+            <a href="test.html" class="button1">Страница<br>общих<br>воспоминаний</a></div>
+        </div>
+        </div>
 
 <!-- //Работа в фотках -->
 
@@ -65,23 +64,9 @@ HEADER
     </div>
 
     <div class="fotka-item_title">
-      <a href="work.html" class="button1">Ну тыкни меня пидор<br>я на тебя сам тыкну гандон ебучий</a></div>
+      <a href="work.html" class="button1">Страница с выбором своих ебал</a></div>
   </div>
   </div>
-
-<!-- //Работа в фотках -->
-<div class="col-4">
-  <div class="fotka-item">
-    <div class="fotka-item_img">
-      <img src="photo/7.1.jpg" width="80%" height="400px" alt="Твоя фотка">
-    </div>
-    <div class="fotka-item_title">
-      <a href="#">Кирюха</a></div>
-    <div class="fotka-item_text">
-      <p class="sozdateli">Сверху гений №2</p>
-  </div>
-</div>
-</div>
 </div>
 <!-- //Работа в фотках -->
 <!--...................................
