--- a/work.html
+++ b/work.html
@@ -32,33 +32,48 @@
   <div class="text12"<div class="button2"><a href="work_rudik.html" class="button2" target="_blank">Описание дауна</a></div></div>
   </div>
 
-
-<!--//Фото на второй странице, надо размножить-->
-<!-- Фото на второй странице, надо размножить-->
-<div class="portfolio-single-page">
-  <div class="containter">
-    <div class="image_work>"<img src="photo/rudik_work.jpg" width="20%" alt="lizard"></div>
-  <div class="text12"<div class="button2"><a href="#" class="button2" target="_blank">Описание дауна</a></div></div>
-</div>
-
-<!--//Фото на второй странице, надо размножить-->
-<!-- Фото на второй странице, надо размножить-->
-<div class="portfolio-single-page">
-  <div class="containter">
-    <img src="photo/rudik_work.jpg" width="20%" alt="lizard">
-  <div class="text12"<div class="button2"><a href="#" class="button2" target="_blank">Описание дауна</a></div></div>
-  </div>
-
-<!--//Фото на второй странице, надо размножить-->
-<!-- Фото на второй странице, надо размножить-->
-<div class="portfolio-single-page">
-  <div class="containter">
-    <img src="photo/fil.jpg" width="20%" alt="lizard">
-  <div class="text12"<div class="button2"><a href="#" class="button2" target="_blank">Описание дауна</a></div></div>
-  </div>
-
-<!--//Фото на второй странице, надо размножить-->
-
+  <!--//Фото на второй странице, надо размножить-->
+  <!-- Фото на второй странице, надо размножить-->
+  <div class="bg_work">
+  <div class="portfolio-single-page">
+    <div class="containter">
+      <img src="photo/iluha.jpg" width="375px" height="500px" alt="lizard" class="img_work">
+    <div class="text12"<div class="button2"><a href="work_iluha.html" class="button2" target="_blank">Описание дауна</a></div></div>
+    </div>
+    <!--//Фото на второй странице, надо размножить-->
+    <!-- Фото на второй странице, надо размножить-->
+    <div class="bg_work">
+    <div class="portfolio-single-page">
+      <div class="containter">
+        <img src="photo/knyaj1.jpg" width="375px" height="500px" alt="lizard" class="img_work">
+      <div class="text12"<div class="button2"><a href="work_knyaj.html" class="button2" target="_blank">Описание дауна</a></div></div>
+      </div>
+      <!--//Фото на второй странице, надо размножить-->
+      <!-- Фото на второй странице, надо размножить-->
+      <div class="bg_work">
+      <div class="portfolio-single-page">
+        <div class="containter">
+          <img src="photo/5.jpg" width="375px" height="500px" alt="lizard" class="img_work">
+        <div class="text12"<div class="button2"><a href="work_muta.html" class="button2" target="_blank">Описание дауна</a></div></div>
+        </div>
+        <!--//Фото на второй странице, надо размножить-->
+        <!-- Фото на второй странице, надо размножить-->
+        <div class="bg_work">
+        <div class="portfolio-single-page">
+          <div class="containter">
+            <img src="photo/ivan1.jpg" width="375px" height="500px" alt="lizard" class="img_work">
+          <div class="text12"<div class="button2"><a href="work_kitaev.html" class="button2" target="_blank">Описание дауна</a></div></div>
+          </div>
+          <!--//Фото на второй странице, надо размножить-->
+          <!-- Фото на второй странице, надо размножить-->
+          <div class="bg_work">
+          <div class="portfolio-single-page">
+            <div class="containter">
+              <img src="photo/1.jpg" width="375px" height="500px" alt="lizard" class="img_work">
+            <div class="text12"<div class="button2"><a href="work_kostya.html" class="button2" target="_blank">Описание дауна</a></div></div>
+            </div>
+            <!--//Фото на второй странице, надо размножить-->
+            <!-- Фото на второй странице, надо размножить-->
       <p align="center"><a href="index.html" class="button-back">&larr;Вернуться на главную</a></p>
 <script src="http://www.fortress-design.com/js/snow-fall.js" type="text/javascript"></script>
 </div>
