--- a/work_fil.html
+++ b/work_fil.html
@@ -9,7 +9,7 @@
   <!-- Optionally use Animate.css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.0.0/animate.min.css">
   <link rel="stylesheet" href="./css/liquid-slider.css">
-
+  <script src="http://www.fortress-design.com/js/snow-fall.js"></script>
   <title>Филя</title>
 </head>
 <body class="no-js">
@@ -40,7 +40,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.4/jquery.touchSwipe.min.js"></script>
   <script src="./js/jquery.liquid-slider.min.js"></script>
-  <script>
+  <script class="script_slider">
     /**
      * If you need to access the internal property or methods, use this:
      * var api = $.data( $('#main-slider')[0], 'liquidSlider');
@@ -48,6 +48,7 @@
      */
     $('#main-slider').liquidSlider();
   </script>
+ <p align="center"><a href="work.html" class="button-back">&larr;Вернуться обратно</a></p>
 </footer>
 </div>
 </body>
