--- a/work_rudik.html
+++ b/work_rudik.html
@@ -1,52 +1,53 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Рудик</title>
-  <style>
-   .leftimg {
-    float:left; /* Выравнивание по левому краю */
-    margin: 7px 7px 7px 0; /* Отступы вокруг картинки */
-   }
-   .rightimg  {
-    float: right; /* Выравнивание по правому краю  */
-    margin: 7px 0 7px 7px; /* Отступы вокруг картинки */
-   }
-  </style>
-  <!-- Нормализация стилей -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-  <!--Свои стили -->
-<link rel="stylesheet" href="main.css">
-  <!--Подключение веб-шрифтов -->
-<link href="https://fonts.googleapis.com/css?family=Merriweather|PT+Sans+Caption:400,700&display=swap" rel="stylesheet">
-<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel"stylesheet">
-<link rel="shortcut icon" type="image/x-icon" href="photo/1.png">
-<script src="https://kit.fontawesome.com/5f8c5e0978.js" crossorigin="anonymous"></script>
-<!--//Подключение веб-шрифтов -->
-</head>
-<!--Описание Фили -->
-<body>
-<div class="bg_rudik">
-  <div class="header1">
-    <p align="center"><h1 class="h1">Даннил Рудковский<h1></p>
-      <div class="header_slogan1">
-        <div class="photo_rudik"><img src="photo/rudik_dick.jpg"  width="60%" height="80%" class="rightimg" alt="Clown">
-        </div>
-<div class="text_moy"<p>Конченный еблан, очень сильно сожалею что встретился с ним в жизни.</p><div>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1" />
+  <meta name="description" content="Liquid Slider : The Last Responsive Content Slider You'll Ever Need" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-<div class="opisanie">
-<p>Тупой урод
-  <p align="right">(&copy;Костя Кузнецов) </p>
-<p>Если бы Булгаков знал Рудика,он бы написал рассказ "Человек - псина"<p align="right">(&copy;Александр Княженко)</p>
-<p> </p>
-<p> </p>
-          </div>
-        </div>
-      </div>
+  <!-- Optionally use Animate.css -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.0.0/animate.min.css">
+  <link rel="stylesheet" href="./css/liquid-slider.css">
+<script src="http://www.fortress-design.com/js/snow-fall.js"></script>
+  <title>Рудик</title>
+</head>
+<body class="no-js">
+<div class="background">
+  <div id="main-slider" class="liquid-slider">
+    <div>
+      <h2 class="title">Рудик</h2>
+      <img src="photos/rud_1.jpg" alt="ebla" width="300px" height="400px" class="eblan"><p align="left" class="first_slide">Если бы Булгаков знал Рудика,он бы написал рассказ "Человек - псина".</p> <p align="right" class="first_slide_name">&copy; Александр Княженко</p>
+  </div>
+    <div>
+      <h2 class="title">Конченный</h2>
+      <img src="photos/rud_2.jpg" alt="ebla" width="300px" height="400px" class="eblan">
+      <p align="left" class="first_slide">Даун тупой жирный случайный урод.</p> <p align="right" class="first_slide_name">&copy; Илья Корепин</p>
+    </div>
+    <div>
+      <h2 class="title">Еблан</h2>
+      <img src="photos/rud_3.jpg" alt="ebla" width="300px" height="400px" class="eblan">
+      <p align="left" class="first_slide">Рудик Сказочный долбоеб</p> <p align="right" class="first_slide_name">&copy; Александр Мутовкин</p>
     </div>
   </div>
+<footer>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.4/jquery.touchSwipe.min.js"></script>
+  <script src="./js/jquery.liquid-slider.min.js"></script>
+  <script>
+    /**
+     * If you need to access the internal property or methods, use this:
+     * var api = $.data( $('#main-slider')[0], 'liquidSlider');
+     * console.log(api);
+<audio controls>
+<source src="audio/rudik.mp3" type="audio/mpeg">
+</audio>
+     */
+    $('#main-slider').liquidSlider();
+  </script>
+  <p align="center"><a href="work.html" class="button-back">&larr;Вернуться обратно</a></p>
+</footer>
 </div>
 </body>
 </html>
