--- a/work_knyaj.html
+++ b/work_knyaj.html
@@ -31,7 +31,7 @@
     <div>
       <h2 class="title">Соси</h2>
       <img src="photos/knyaj3.jpg" alt="iluha" width="300px" height="400px" class="eblan">
-      <p align="left" class="first_slide">Славный грузин без точки для продажи мандаринов на рынке.</p> <p align="right" class="first_slide_name">&copy; Александр Мутовкин</p>
+      <p align="left" class="first_slide">Княженко - самый добрый алкоголик на свете.</p> <p align="right" class="first_slide_name">&copy; Александр Мутовкин</p>
     </div>
   </div>
 <footer>
