--- a/test.html
+++ b/test.html
@@ -26,8 +26,21 @@
   <img class="mySlides" src="test_photo/best2.jpg" style="width:100%" height="600px">
   <img class="mySlides" src="test_photo/8.jpg" style="width:100%" height="600px">
   <img class="mySlides" src="test_photo/3.jpg" style="width:100%" height="600px">
-  <iframe class="mySlides" style="width:100%" height="600px" src="https://cs545628.vkuservideo.net/12/e96OT01PTc4MjE/videos/37ed942739.720.mp4?extra=UFx56634oQnkXHn9c7C27sQRKeZKrbuZFaaYcfjjSjxlfArmocZjYd-aIrPdmTAuIQboV7nW7031M9qkoqO-jewmCrHzB9mZiQc02No1PkESyx1GgIYO_dQoQCbeO7gWoLgtdEBqyl3Wxa0skcnvz5o&c_uniq_tag=A76kRkLpVPuSm01K4-cfaQSYouwr_w8Ya-Fnug_mhgY"> </iframe>
-  <iframe class="mySlides" style="width:100%" height="600px" src="https://cs531224.vkuservideo.net/5/eeaNjc_NjAwNjg-/videos/1787db2efe.720.mp4?extra=FL4nl9mGBEWQOHCoHycbNP8h58J05A_8Z_alCL5p4zrgv0WIapFzZZZNN33PPDgwMlDmyv-LlBYyvC4_v0tmnSekGRPlaMdgWP4hlAJaOj5wLgPHQ0ysUWAaCvXU8feLOa0mmBfqsSGCc06WuxuThrCL&c_uniq_tag=MjIyEtGQoflU7HxJKVfgdgkmOi5qREd4hhm4ftbsYgg"> </iframe>
+  <video controls class="mySlides" src="video/champagne.mp4" style="width:100%" height="600px"></video>
+  <video controls class="mySlides" src="video/2.mp4" style="width:100%" height="600px"></video>
+  <video controls class="mySlides" src="video/3.mp4" style="width:100%" height="600px"></video>
+  <video controls class="mySlides" src="video/4.mp4" style="width:100%" height="600px"></video>
+  <video controls class="mySlides" src="video/5.mp4" style="width:100%" height="600px"></video>
+  <video controls class="mySlides" src="video/6.mp4" style="width:100%" height="600px"></video>
+  <video controls class="mySlides" src="video/7.mp4" style="width:100%" height="600px"></video>
+  <video controls class="mySlides" src="video/8.mp4" style="width:100%" height="600px"></video>
+  <video controls class="mySlides" src="video/9.mp4" style="width:100%" height="600px"></video>
+  <video controls class="mySlides" src="video/10.mp4" style="width:100%" height="600px"></video>
+  <video controls class="mySlides" src="video/11.mp4" style="width:100%" height="600px"></video>
+  <video controls class="mySlides" src="video/12.mp4" style="width:100%" height="600px"></video>
+  <video controls class="mySlides" src="video/13.mp4" style="width:100%" height="600px"></video>
+  <video controls class="mySlides" src="video/14.mp4" style="width:100%" height="600px"></video>
+ <!--
   <iframe class="mySlides" style="width:100%" height="600px" src="https://cs545608.vkuservideo.net/12/e70MzsxMjY0Nzgw/videos/a9fac59d80.720.mp4?extra=AjYeeSvR_TdIuKUll85CChemrg7xGkSPIHOkRa81aR-vyW205dLOLVTPiLoBLiiL4Z6PS0wrNyBYXk8shOgZRJyDU6PAG_S4baVHeIaho_Zqofom0YpPmR3WTLp7FFQwqhJt1a1CtPzfJCU41LntuGjT&c_uniq_tag=VEtlLxLvNfW6FAPBEuFw4NSO32-lFxEtfqki9gLo2pI"></iframe>
   <iframe class="mySlides" style="width:100%" height="600px" src="https://cs564416.vkuservideo.net/3/eb9Pj85Mz8-NDk2/videos/9e8b43dd58.720.mp4?extra=w51H879BguEuW_mQPEJnQFqjabUzgeU3oDo-yKQqre47QRAKTROGt17oaHQ6MWqs_0lkvPU9Rq-Nxj7EOYqi4zfwH7_o070FdqM49uHXbKlgImTBk0oCG08hFMJ0pFXOGBncwqDd1rRdTmF2lTBSvrqU&c_uniq_tag=PeFFPS4ol5EVMB7doiSxii52iUUfJgXHiheA-4Hfa3A"></iframe>
   <iframe class="mySlides" style="width:100%" height="600px" src="https://cs511106.vkuservideo.net/2/e52NTU6Ozo8Nzg-/videos/8557668bc7.720.mp4?extra=LXMsA2o1T1MwaO3gRlbdkAoSct2Mj6scz6ec6vBhnDNp0DrjWRjc-EL-ZpbMoin84bElGzmaOQX5nFsm0s_G3byZYlMSMDgNEFQNlaNcNNLWX6NndblcMAB3WVD2L5FhDP6cEQvEH4tKSHMh2ieCiDVZ&c_uniq_tag=GXStloFqkFR2bDkO7fB6A70MYvEA_TGljm-3IAmhfdc"></iframe>
@@ -39,7 +52,7 @@
   <iframe class="mySlides" style="width:100%" height="600px" src="https://cs573204.vkuservideo.net/11/e18Njo4MTU1Mjs6/videos/ffbb971638.480.mp4?extra=3bd0OhEBv9glMYKeyy7ehV9PJWBxVxeKFWQF93PFJIRpwgyrVOjcumEeMjTbkHrU6UB3VH41H2GZPIIapy8zp8VamYtcKYBL7F1E78Gzj1l8duzwS5UkW3bbSwWwQNzyfymso8ziWFtM0Gk2A_Y2UrH8&c_uniq_tag=Swdfgj7T0rBMyVcoKUCSxAoomUmHmMjlHkImt6Ngg2c"></iframe>
   <iframe class="mySlides" style="width:100%" height="600px" src="https://cs516531.vkuservideo.net/2/e13Mz4_OTY_PDQ5/videos/7b58430e5d.720.mp4?extra=YyjRAF25Q-wB_jjIHtLnPk0jQ_kaF1cYzu2WzJ8mNOcXcSsYpPRwPN-Uvx_fHkmZq1_R4y_9unokU56A5EWvgJMsW2Gzp0xcINwEcgbiELNLLfQ9MNEDG8ByIGG-wK6ek_SeTClyNGgbrfZEDo8yf7zu&c_uniq_tag=Y-PEhKjw0_MtVoefAvmSkhFEvC9n4M_Tm9lDhKn0Tz0"></iframe>
   <iframe class="mySlides" style="width:100%" height="600px" src="https://cs611903.vkuservideo.net/16/e2cPjk0OjA4PDY/videos/3b74df85a3.720.mp4?extra=JZEoIpudt86Wskt9WRf2OHG3SALoV5nJIKnyawREt5NPPq8yzI7jW_TYI6WTpq-TiZbURy2lVOeu8UntFxmQc_2j0PmeYqkIQ1CRBdNFfu6ZnmuMRi5KgrfQyNyNa7ocKQwwubrmMn7Q4iLD9MSMZvg&c_uniq_tag=VWkZDhH9XkthqO4jp3PBk4dH-ZdrQPDbgN2gIHzfnJw"></iframe>
-  <iframe class="mySlides" style="width:100%" height="600px" src="https://cs510204.vkuservideo.net/2/eceMzo6OzU5Ozc/videos/ab2c5a2396.480.mp4?extra=JI-WAN-U6hZ8S7FSBFMbHeSZpwdtF4hwA-Gj3Z-3nyh1HC2wALlIencsYFZSpKqqfxf6oaxStgSX1AlYk5OVMH1CbWmmEXIZURrFsPIyl8ifAYx8qcl_gvNlxb6_oJixOmSNqx7crcxKM5eEo_qLAj4&c_uniq_tag=zftSkib2myFUFj7BRI29NyPI-40-Xd7IuydxoDthjnc"></iframe>
+  <iframe class="mySlides" style="width:100%" height="600px" src="https://cs510204.vkuservideo.net/2/eceMzo6OzU5Ozc/videos/ab2c5a2396.480.mp4?extra=JI-WAN-U6hZ8S7FSBFMbHeSZpwdtF4hwA-Gj3Z-3nyh1HC2wALlIencsYFZSpKqqfxf6oaxStgSX1AlYk5OVMH1CbWmmEXIZURrFsPIyl8ifAYx8qcl_gvNlxb6_oJixOmSNqx7crcxKM5eEo_qLAj4&c_uniq_tag=zftSkib2myFUFj7BRI29NyPI-40-Xd7IuydxoDthjnc"></iframe> -->
   <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
   <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
 </div>
