--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel"stylesheet">
 <link rel="shortcut icon" type="image/x-icon" href="photo/1.png">
 <script src="https://kit.fontawesome.com/5f8c5e0978.js" crossorigin="anonymous"></script>
-<script src="http://www.fortress-design.com/js/snow-fall.js"></script>
+<script src="https://www.fortress-design.com/js/snow-fall.js"></script>
   </head>
   <body>
   <font color="#fff">
@@ -25,7 +25,7 @@ HEADER
         <br>
         <br>
         <br>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/v7s2VjwQSMw?rel=0&autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <audio controls src="audio/jb.mp3" autoplay> </audio>
     <div class="header__arrow">
       <i class="fas fa-chevron-down"></i>
     </div>
