--- a/test.html
+++ b/test.html
@@ -4,14 +4,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="test.css">
-<script src="http://www.fortress-design.com/js/snow-fall.js"></script>
+<script src="https://www.fortress-design.com/js/snow-fall.js"></script>
 <style>
 .mySlides {display:none;}
 </style>
 <body>
 <div class="background">
 <header>
-    Показ ебланов
+    Просто вспомните что было раньше
 </header>
 <div class="w3-content w3-display-container">
   <img class="mySlides" src="test_photo/7.jpg" style="width:100%" height="600px">
