--- a/work_iluha.html
+++ b/work_iluha.html
@@ -9,7 +9,7 @@
   <!-- Optionally use Animate.css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.0.0/animate.min.css">
   <link rel="stylesheet" href="./css/liquid-slider.css">
-<script src="http://www.fortress-design.com/js/snow-fall.js"></script>
+<script src="https://www.fortress-design.com/js/snow-fall.js"></script>
   <title>Корепушкин</title>
 </head>
 <body class="no-js">
