--- a/work.html
+++ b/work.html
@@ -75,7 +75,7 @@
             <!--//Фото на второй странице, надо размножить-->
             <!-- Фото на второй странице, надо размножить-->
       <p align="center"><a href="index.html" class="button-back">&larr;Вернуться на главную</a></p>
-<script src="http://www.fortress-design.com/js/snow-fall.js" type="text/javascript"></script>
+<script src="https://www.fortress-design.com/js/snow-fall.js" type="text/javascript"></script>
 </div>
 </body>
 </html>
